# AI-Parametric-Sweep-Experiment-Runner

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: main.ipynb  main.py
src/AgentPrompts/: critic.txt  editor.txt  executor.txt  parser.txt  plotter.txt  researcher.txt  summarizer.txt  writer.txt
src/tools/: executeCommand.py  fileLister.py  fileReader.py  fileWriter.py  schema.py
