[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "experiment-manager"
version = "0.1.0"
description = "AI-powered experiment management system"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-openai",
    "python-dotenv",
    "pydantic>=2.0",
    "agents",
    "jupyter",
    "nbconvert",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
experiment-manager = "src.cli:main"
experiment = "src.cli:main"

[tool.setuptools]
packages = ["src", "src.tools"]
